Fixed bug on mobile

--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -7,6 +7,7 @@
   background-color: whitesmoke;
   padding: 2rem 0rem;
   position: relative;
+  overflow-x: hidden;
 }
 
 .promo-text {
@@ -20,6 +21,7 @@
   position: absolute;
   margin-top: 3rem;
   left: -10rem;
+  overflow-x: hidden;
 }
 
 .promo-car-img2 {
